--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -41,9 +41,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>주변 점심 파티를 찾기 위해 위치 정보가 필요합니다.</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Kakao Map SDK -->
+	<key>KAKAO_APP_KEY</key>
+	<string>YOUR_KAKAO_NATIVE_APP_KEY</string>
 </dict>
 </plist>
